real_experiments/ws/ds2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: assign-distribute
            port:
              number: 6000
#spec:
#  ingressClassName: nginx
#  rules:
#  - http:
#      paths:
#      - pathType: Prefix
#        path: /coding/
#        backend:
#          service:
#            name: coding-assign
#            port:
#              number: 6000
